# website

./: .air.toml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierrc.cjs  .typos.toml  CNAME  Cargo.toml  LICENSE  README.md  astro.config.mjs  astro.config.ts  bacon.toml  base.css  ctp-highlightjs-theme.css  default.nix  ec.config.mjs  eslint.config.ts  flake.nix  go.mod  go.sum  index.html  justfile  main.go  module.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rss.xml  sequoia.json  shell.nix  smt.baj  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: README.md  dependabot.yml
.github/workflows/: generate.yml  release.yml  spelling.yml  tests.yml  typos.yml
api/: github.go  kofi.go
assets/: Blog-1T8O5yLm.js  Blog-4FDlvr6G.js  Blog-J0U_-lvj.css  Blog-L1uchG4y.js  Blog-LCoc7Cvz.js  Blog-U-AWEVkM.js  Blog-W9bA2DUD.js  Blog-X7RayXlf.css  Blog-iTJ2PGBh.js  Blog-mPWZeOFY.js  Blog-vfJIKZpm.js  Blog-x3z5lzLt.js  BlogPost-6LrCRy_6.js  BlogPost-84DeIr2c.css  BlogPost-9lsPD0rJ.js  BlogPost-GEXThBns.css  BlogPost-Jz7X_q1d.js  BlogPost-fFUpLk1K.js  BlogPost-gP7GQhgy.js  BlogPost-klbTV2BG.js  BlogPost-lCZIipCt.css  BlogPost-lF61R56P.js  BlogPost-oRaa8JSQ.js  BlogPost-x13_rmkY.js  BlogPost-xEuKGH4J.js  Projects-0N7b46JG.js  Projects-4ZfjRd0Y.js  Projects-7Gm5Ilhz.js  Projects-9Lu5lhqO.css  Projects-FoQaLUNN.js  Projects-I-wHqml4.js  Projects-U_JNCxpe.js  Projects-Z17cJAUn.js  Projects-iyrnQWna.js  Projects-oPIDHr1z.js  Projects-pPJrMDiE.js  index-0czHCqlj.js  index-4wg0lcVR.js  index-9aXFeIVU.css  index-B0Ra_gVs.js  (+17 more)
content/: 2023-wrapped.md  2024-wrapped.md  LICENCE  custom-lib-nixossystem.md  experimenting-with-nix.md  im-not-mad-im-disapointed.md  im-not-mad-im-disappointed.md  my-journey-so-far.md  my-workflow.md  nix-shells.md  nixos-and-postgresql.md  self-healing-urls.md  writing-a-neovim-plugin.md
isabelroses/: README.md
lib/: blog.go  codeparser.go  donos.go  feeds.go  pfp.go  pfp.txt  rss.go  settings.go  templates.go  types.go
lib/content/: experimenting-with-nix.md  nixos-and-perl.md  writing-a-neovim-plugin.md
nix/: default.nix  module.nix  package.nix  shell.nix
pages/: 2004.go  blog.go  donos.go  error.go  home.go  post.go  projects.go
posts/: LICENSE  my-workflow.md  nixos-and-postgresql.md  self-healing-urls.md
public/: humans.txt  robots.txt  rss.xml  styles.css
public/.well-known/: site.standard.publication
public/2004/: oneko.js
public/posts/: my-workflow.md  nixos-and-postgresql.md  self-healing-urls.md
scripts/: update-stars.sh
src/: App.vue  consts.ts  content.config.ts  main.rs  main.ts  shims-vue.d.ts  static_files.rs  templates.rs
src/api/: github.rs  kofi.rs  (+1 more)
static/: humans.txt  styles.css
styles/: base.css  bun.lockb  font.scss  main.scss  media.scss  package.json  reset.scss  tailwind.config.js  text.scss  themes.scss  transitions.scss
templates/: main.go
(+148 files in other folders)
