[package]
name = "isabelroses-website"
version = "0.2.0"
license = "MIT"
description = "my lovely website"
homepage = "https://github.com/isabelroses/website"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.21"
mime_guess = "2.0.5"
nom = "7.1.3"
atom_syndication = "0.12.5"
rust-embed = { version = "8.5.0", features = ["include-exclude", "compression"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.132"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
chrono = "0.4.38"

[lints.clippy]
all = "warn"
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
