[package]
name = "isabelroses-website"
version = "0.3.0"
license = "MIT"
description = "my lovely website"
homepage = "https://github.com/isabelroses/website"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["json", "tokio", "http1", "http2"] }
comrak = { version = "0.35.0", default-features = false }
dotenv = "0.15.0"
mime_guess = "2.0.5"
atom_syndication = "0.12.5"
rust-embed = { version = "8.5.0", features = ["include-exclude", "compression"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.132"
serde_norway = "0.9.42"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
chrono = { version = "0.4.39", default-features = false }
estimated_read_time = "1.0.0"
once_cell = "1.20.3"

[lints.clippy]
all = "warn"
pedantic = "warn"
similar_names = { level = "allow", priority = 1 }
